# CanadaDemonList

./: .vercelignore  CHANGES_SUMMARY.md  CUSTOMIZATION_GUIDE_TR.md  DEPLOYMENT_README_TR.md  EN_KOLAY_YOL.md  GITHUB_A_YUKLEME.md  GITHUB_BASARILI_KONTROL.md  GITHUB_DESKTOP_AYARLARI.md  GITHUB_DOSYALAR_GORUNMUYOR.md  GITHUB_DOSYALAR_YOK_COZUM.md  GITHUB_ISIM_HATASI.md  GITHUB_PUBLISH_ADIMI.md  GITHUB_TUM_DOSYALARI_EKLE.md  KURULUMSUZ_YAYINLAMA.md  OZELLESTIRME_GEREKLILERI.md  RAILWAY_HIZLI_YAYINLAMA.md  VERCEL_DEPLOYMENT.md  VERCEL_HIZLI_YAYINLAMA.md  VERCEL_YAYINLAMA_REHBERI.md  build.sh  firebase.js  vercel-env-variables.md  vercel.json
api/: Cargo.toml  handler.rs  index.rs
pointercrate-example/src/: main.rs
